# edna

./: .gitignore  Cargo.toml  LICENSE  README.md  config_mysql.sh  initialize.sh  mysqld.cnf  profile.py  run_all.sh
applications/hotcrp/: Cargo.toml  run_benchmarks.sh
applications/hotcrp/src/: main.rs  schema.sql
applications/hotcrp/src/datagen/: comments.rs  conflicts.rs  datagen.rs  mod.rs  papers.rs  review_preferences.rs  reviews.rs  users.rs  watches.rs
applications/hotcrp/src/disguises/: gdpr_disguise.json  gdpr_disguise.rs  pp_gen.json  table_info.json  universal_anon_disguise.json  universal_anon_disguise.rs
applications/lobsters/: Cargo.toml  run_benchmarks.sh  schema.sql
applications/lobsters/src/: data-import.rs  datagen.rs  main.rs  reveal_bench.rs  statistics.rs  updates_bench.rs
applications/lobsters/src/disguises/: baseline.rs  current_delete_disguise.json  data_decay.json  gdpr_disguise.json  hobby_anon.json  mod.rs  pp_gen.json  pp_gen_updated.json  table_info.json  table_info_updated.json
applications/lobsters/src/migrations/: addusersettingshowemail.rs  mod.rs  normalize_url.rs  parent_comment_id_table.rs  pp_gen_updated.json  story_text.rs  table_info_updated.json
applications/lobsters/src/queriers/: comment.rs  frontpage.rs  message.rs  mod.rs  recent.rs  stories.rs  user.rs  vote.rs
applications/proxy/: Cargo.toml  run.sh
applications/proxy/src/: main.rs
applications/websubmit-rs/: Cargo.toml  Rocket.toml
applications/websubmit-rs/cryptdb-server/: run_benchmarks.sh  sample-config.toml
applications/websubmit-rs/cryptdb-server/src/: admin.rs  apikey.rs  args.rs  backend.rs  config.rs  email.rs  main.rs  privacy.rs  questions.rs  schema.sql  schema_nocrypto.sql
applications/websubmit-rs/cryptdb-server/src/disguises/: gdpr_disguise.json  gdpr_disguise.rs  guise_gen.rs  table_info.json  universal_anon_disguise.json  universal_anon_disguise.rs
applications/websubmit-rs/cryptdb-server/templates/: answers.html.hbs  footer.html.hbs  layout.html.hbs  leclist.html.hbs
applications/websubmit-rs/cryptdb-server/templates/admin/: lec.html.hbs  lecadd.html.hbs
applications/websubmit-rs/edna-server/: run_benchmarks.sh  run_srv.sh  sample-config.toml
applications/websubmit-rs/edna-server/resources/css/: main.css  navbar-top-fixed.css
applications/websubmit-rs/edna-server/src/: admin.rs  apikey.rs  args.rs  backend.rs  config.rs  main.rs  privacy.rs  questions.rs  schema.sql
applications/websubmit-rs/edna-server/src/disguises/: gdpr_disguise.rs  guise_gen.json  mod.rs  pp_gen.json  table_info.json  universal_anon_disguise.rs  universal_anon_disguise_edna.rs
applications/websubmit-rs/edna-server/templates/: answers.hbs  footer.hbs  layout.hbs  leclist.hbs  leclist.html.hbs  login.hbs  login.html.hbs  nav.hbs  questions.hbs  questions.html.hbs  restore.html.hbs
applications/websubmit-rs/edna-server/templates/admin/: anonymize.hbs  anonymize.html.hbs  lec.hbs  lec.html.hbs  lec_edit.hbs  lecadd.hbs  lecedit.html.hbs  users.hbs  users.html.hbs
applications/websubmit-rs/edna-server/templates/apikey/: generate.hbs  generate.html.hbs
applications/websubmit-rs/edna-server/templates/edit_as_pseudoprincipal/: get_credentials.html.hbs
applications/websubmit-rs/qapla-server/: Cargo.toml  README.md  Rocket.toml  build.rs  run_benchmarks.sh  sample-config.toml
applications/websubmit-rs/qapla-server/src/: .questions.rs.rustfmt  admin.rs  apikey.rs  args.rs  backend.rs  config.rs  email.rs  login.rs  main.rs  privacy.rs  questions.rs  schema.sql
applications/websubmit-rs/qapla-server/src/disguises/: gdpr_disguise.rs  universal_anon_disguise.rs
applications/websubmit-rs/qapla-server/templates/: login.html.hbs
applications/websubmit-rs/qapla-server/templates/apikey/: generate.html.hbs
config/: config_mysql.sh  initialize.sh
edna/: Cargo.toml
edna/src/: crypto.rs  disguiser.rs  gen_value.rs  highlevel_api.rs  lib.rs  lowlevel_api.rs  main.rs  predicate.rs  proxy.rs  revealer.rs
edna/tests/: disguise_test.rs  modify_updates_test.rs  normal_execution_test.rs  reveal_test.rs  reverse_test.rs  schema_updated.sql  schema_updates_test.rs  shared_data_test.rs  updates_test.rs
edna_cryptdb/: Cargo.toml
edna_cryptdb/src/: crypto.rs  disguiser.rs  gen_value.rs  highlevel_api.rs  lib.rs  lowlevel_api.rs  main.rs  predicate.rs  proxy.rs  revealer.rs
edna_cryptdb/src/helpers/: crypto_helpers.rs  helpers.rs  mod.rs  mysql_helpers.rs  parser_helpers.rs
edna_cryptdb/src/records/: diff_record.rs  mod.rs  persist_records.rs  privkey_record.rs  record_ctrler.rs  speaksfor_record.rs
edna_cryptdb/tests/: disguise_test.rs  normal_execution_test.rs  reverse_test.rs  schema.sql  shared_data_test.rs
edna_cryptdb/tests/disguises/: gdpr_disguise.json  pp_gen.json  table_info.json  universal_anon_grouped_disguise.json  universal_remove_disguise.json
edna_srv/: Cargo.toml  openapi.json  run_srv.sh
edna_srv/lobsters_decay/: Cargo.toml  run_decay.sh
edna_srv/lobsters_decay/src/: main.rs
edna_srv/src/: apiproxy.rs  main.rs  tests.rs
related_systems/qapla/: Flags.mk  Makefile  README.md  qapla.cpp  qapla.h
results/hotcrp_results/: hotcrp_disguise_stats_3080users.csv  hotcrp_disguise_stats_3080users_baseline.csv  hotcrp_disguise_stats_3080users_batch.csv  hotcrp_disguise_stats_3080users_nocrypto.csv
results/lobsters_results/: concurrent_disguise_stats_13users_none.csv  lobsters_disguise_stats.csv  lobsters_disguise_stats_baseline_decay.csv  lobsters_disguise_stats_baseline_delete.csv  lobsters_disguise_stats_baseline_hobbyanon.csv  lobsters_disguise_stats_baseline_stats.csv  lobsters_disguise_stats_basic.csv  lobsters_disguise_stats_basic_dryrun.csv  lobsters_disguise_stats_dryrun.csv  lobsters_disguise_storage_stats.csv
results/plotters/: plot_all.sh  plot_composition_stats.py  plot_hotcrp_stats.py  plot_lobsters_concurrent.py  plot_lobsters_poster.py  plot_lobsters_stats.py  plot_slides.py  plot_websubmit_stats.py
results/websubmit_results/: cryptdb_stats_20lec_2000users_crypto.csv  disguise_stats_20lec_2000users.csv  (+3 more)
(+140 files in other folders)
