[package]
name = "lobsters-decay"
version = "0.0.1"
authors = ["Lily Tsai <tslilyai@mit.edu>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
clap = "2.33.0"
chrono = { version = "0.4.0", features = ["serde"] }
edna = {path = "../../edna"}
log = "0.4.0"
env_logger = "0.8.4"
rand = "0.8.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
mysql = "23.0.1"
mysql_common = "0.22"
reqwest = { version = "0.11", default-features = false, features = ["json", "cookies", "blocking", "rustls-tls"] }

[[bin]]
name = "lobsters-decay"
path = "src/main.rs"
